--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,13 @@
 {
     "autoload": {
-        "psr-4": {
-            "App\\": "app/"
-        }
     },
     "require-dev": {
         "symfony/var-dumper": "^5.0"
     },
     "require": {
         "bramus/router": "~1.4",
-        "nette/database": "^3.0",
         "symfony/http-foundation": "^5.1",
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "doctrine/orm": "^2.7"
     }
 }
