feat: set doctrine cli-config
Adding cli-config and doctrineBootstrap where will be doctrine package when install via composer install command

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /vendor
-.config.php
-.composer.lock
+config.php
+composer.lock
 
-!/vendor/bin/doctrineBootstrap.php
+!/vendor/
 !/vendor/bin/cli-config.php
