--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        }
     },
     "require-dev": {
         "symfony/var-dumper": "^5.0"
